--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -30,4 +34,46 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation 'com.google.android.material:material:1.1.0-beta02'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-perf:18.0.0'
+    implementation 'com.yarolegovich:sliding-root-nav:1.1.0'
+    implementation 'id.zelory:compressor:2.1.0'
+    implementation 'com.android.support:support-v4:29.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.karumi:dexter:6.1.2'
+    implementation 'io.github.inflationx:calligraphy3:3.1.1'
+    implementation 'io.github.inflationx:viewpump:2.0.3'
+    implementation 'com.google.firebase:firebase-firestore:22.0.0'
+    implementation 'com.google.firebase:firebase-auth:20.0.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.google.firebase:firebase-messaging:21.0.0'
+    implementation 'com.google.firebase:firebase-core:18.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
+    implementation "com.firebase:firebase-client-android:2.3.1"
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation "com.google.maps.android:android-maps-utils:0.4"
+    implementation 'com.tapadoo.android:alerter:2.0.4'
+    implementation 'com.android.support:recyclerview-v7:29.0.0'
+    implementation 'com.android.support:design:29.0.0'
+    implementation 'com.android.support:cardview-v7:29.0.0'
+    implementation 'me.grantland:autofittextview:0.2.1'
+    implementation 'com.afollestad.material-dialogs:commons:0.8.6.1'
+    implementation 'com.github.ivbaranov:materialfavoritebutton:0.1.4'
+    implementation 'com.github.marlonlom:timeago:3.0.2'
+    implementation 'org.apache.commons:commons-lang3:3.6'
+    implementation 'commons-io:commons-io:2.6'
+    implementation 'com.airbnb.android:lottie:2.5.1'
+    implementation 'android.arch.core:runtime:1.1.1'
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:2.1.2'
+    implementation 'com.huangyz0918:androidwm-light:0.1.2'
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.5.Final'
+    implementation 'com.mikepenz:aboutlibraries:6.2.3'
+    implementation 'info.androidhive:imagefilters:1.0.7'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
