--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     implementation 'com.google.android.material:material:1.1.0-beta02'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.google.firebase:firebase-perf:18.0.0'
+    implementation 'com.google.firebase:firebase-perf:19.0.9'
     implementation 'com.yarolegovich:sliding-root-nav:1.1.0'
     implementation 'id.zelory:compressor:2.1.0'
     implementation 'com.android.support:support-v4:29.0.0'
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:18.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation "com.firebase:firebase-client-android:2.3.1"
@@ -64,8 +65,11 @@ dependencies {
     implementation 'com.github.marlonlom:timeago:3.0.2'
     implementation 'org.apache.commons:commons-lang3:3.6'
     implementation 'commons-io:commons-io:2.6'
-    implementation 'com.airbnb.android:lottie:2.5.1'
+    implementation 'com.airbnb.android:lottie:2.5.5'
     implementation 'android.arch.core:runtime:1.1.1'
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
+    implementation 'com.github.marcoscgdev:DialogSheet:2.0.5'
+    implementation 'com.github.yalantis:ucrop:2.2.5'
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:2.1.2'
     implementation 'com.huangyz0918:androidwm-light:0.1.2'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.5.Final'
