--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,11 +16,16 @@ android {
     }
 
     buildTypes {
+        debug {
+            resValue 'string', "google_maps_key", "API_KEY"
+        }
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue 'string', "google_maps_key", "API_KEY"
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -50,6 +55,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation "com.firebase:firebase-client-android:2.3.1"
@@ -75,6 +81,10 @@ dependencies {
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.5.Final'
     implementation 'com.mikepenz:aboutlibraries:6.2.3'
     implementation 'info.androidhive:imagefilters:1.0.7'
+
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation 'com.android.volley:volley:1.1.1'
 
 }
 
